虚拟列表- 调整格式

--- a/24-11-25.md
+++ b/24-11-25.md
@@ -78,7 +78,7 @@ const boxHeight = lastItem.height + lastItem.translateY;
 </div>
 ```
 
-## 初始化滚动列表
+## 3.初始化滚动列表
 
 我们已经有一个可以滚动的区域了，那么接下来需要填充数据
 我们可以根据当前容器的高度和之前计算好的偏移值来计算能够当前视口能够放下多少条数据
@@ -140,7 +140,7 @@ const renderData = data.slice(0, getCount());
 </div>
 ```
 
-### 动态化滚动列表
+## 4.动态化滚动列表
 
 在初始化完成后，我们就得到了一个只有首屏的列表了，那么应该怎么让它在滚动的时候也能够有数据呢？
 
