--- a/docs/算法/题目/表达式求值.md
+++ b/docs/算法/题目/表达式求值.md
@@ -1,3 +1,8 @@
+---
+category: 算法
+date: 24.9.25
+---
+
 # 表达式求值
 
 > 2024 年 9 月 25 日 星期三 20 时 27 分 38 秒
@@ -187,7 +192,7 @@ void infixToPostfix(const vector<string> &s, vector<string> &postfix) {
     op_stk.pop();
   }
 }
-````
+```
 
 # 附录
 
